@@ -1,0 +1,91 @@
+*.o
+*.swp
+*.swo
+*~
+ABOUT-NLS
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+config.cache
+config.cache-env
+config.guess
+config.h
+config.h.in
+config.log
+config.status
+config.sub
+configure
+data/Makefile
+data/Makefile.in
+data/icon.edj
+data/theme.edj
+depcomp
+doc/Doxyfile
+doc/Makefile
+doc/Makefile.in
+emotion.pc
+emotion.spec
+install-sh
+libtool
+ltmain.sh
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+missing
+src/Makefile
+src/Makefile.in
+src/bin/.deps/
+src/bin/.libs/
+src/bin/Makefile
+src/bin/Makefile.in
+src/bin/emotion_test
+src/edje_external/.deps/
+src/edje_external/.libs/
+src/edje_external/Makefile
+src/edje_external/Makefile.in
+src/edje_external/module.la
+src/edje_external/module_la-emotion.lo
+src/examples/.deps/
+src/examples/Makefile
+src/examples/Makefile.in
+src/generic_players/Makefile
+src/generic_players/Makefile.in
+src/generic_players/vlc/.deps/
+src/generic_players/vlc/Makefile
+src/generic_players/vlc/Makefile.in
+src/lib/.deps/
+src/lib/.libs/
+src/lib/Makefile
+src/lib/Makefile.in
+src/lib/emotion_main.lo
+src/lib/emotion_smart.lo
+src/lib/libemotion.la
+src/modules/Makefile
+src/modules/Makefile.in
+src/modules/generic/.deps/
+src/modules/generic/.libs/
+src/modules/generic/Makefile
+src/modules/generic/Makefile.in
+src/modules/generic/em_generic.la
+src/modules/generic/em_generic_la-emotion_generic.lo
+src/modules/gstreamer/.deps/
+src/modules/gstreamer/.libs/
+src/modules/gstreamer/Makefile
+src/modules/gstreamer/Makefile.in
+src/modules/gstreamer/gstreamer.la
+src/modules/gstreamer/gstreamer_la-emotion_alloc.lo
+src/modules/gstreamer/gstreamer_la-emotion_convert.lo
+src/modules/gstreamer/gstreamer_la-emotion_fakeeos.lo
+src/modules/gstreamer/gstreamer_la-emotion_gstreamer.lo
+src/modules/gstreamer/gstreamer_la-emotion_sink.lo
+src/modules/xine/.deps/
+src/modules/xine/.libs/
+src/modules/xine/Makefile
+src/modules/xine/Makefile.in
+src/modules/xine/xine.la
+src/modules/xine/xine_la-emotion_xine.lo
+src/modules/xine/xine_la-emotion_xine_vo_out.lo
+stamp-h1
