@@ -2,4 +2,7 @@
 	<request>
 		<domain name="_"/>
 	</request>
+	<assign>
+		<filesystem path="/usr/bin/emotion_test" exec_label="none" />
+	</assign>
 </manifest>
