@@ -9,6 +9,7 @@ Additions:
 	- Sync rendering with Ecore_Animator.
 	- Track pending object for proper shutdown.
 	- Start handling embedded hardware customization.
+	- Add fimcconvert and capsfilter element for device
 
 Fixes:
 	- build out of tree.
@@ -17,6 +18,7 @@ Fixes:
 	- fix priority set/get for gstreamer.
 	- reset VLC pipeline on EOS.
 	- fix race condition on shutdown when still saving a file position.
+	- fix to call correct render function.
 
 Improvements:
 
