@@ -50,3 +50,11 @@
 2012-08-30  Carsten Haitzler (The Rasterman)
 
         1.7.0 release
+
+2012-09-06  Sohyun Kim
+
+	* Add capsfilter to limit format and size for fimc on device.
+
+2012-10-11  Sohyun Kim
+
+	* Fix to call correct render function based on the format.
